# TraderBot

./: .env  .gitignore  CMakeLists.txt  README.md  config copy.json  config.json  install.sh  plan.md  requirements.txt
docs/: indicators.md  indicators_conf.md  new_strategy.md  project_logic.drawio  solver-trader_pair_logic.drawio  strategies.md  strategy.md  trader.md  trading.drawio  worker-trader_pair_logic.drawio  worker.md  worker_logic.drawio
notes/asynchronous/: 0_overview.md
notes/curl/: 0_overview.md
notes/docker/: 0_overview.md
notes/fundamental_analysis/theory/: 0_overview.md
notes/neuronet/: TODO.md
notes/neuronet/theory/: 0_overview.md  1.1_LSTM.ipynb  1.2_conv.ipynb  1.3_pooling.ipynb  1.4.1_convlstm.ipynb  1.4.2_separableconv.ipynb  1.5_bidirectional.ipynb  1.6.1_timedistributed.ipynb  1.6.2_timedistributed.md  1.7_batchnormalization.ipynb  1_architectures.md  2_activation.md  3_loss.md  4_optimizers.md  5_metrics.md  6_callbacks.md  7_train_model.md  8_training_types.md  9_scaler.md
notes/technical_analysis/: TODO.md
notes/technical_analysis/0_theory/: 0_overview.md  1_averages.md  2_noise.md  3_death_cross.md  4_golden_cross.md  5_trading_style.md  6_support_&_resistance.md  7_breakout.md  8_trendlines.md  9_create_profitable_plan.md
notes/technical_analysis/1_patterns/: 0_overview.md  1_sc_patterns.md  2_classical_patterns.md  3_harmonic_patterns.md
notes/technical_analysis/2_indicators/: 0_overview.md  1_momentum.md  2_trend.md
notes/technical_analysis/3_time_series_analysis/: 0_overview.md  10_varmax.md  11_ses.md  12_hwes.md  1_arima.md  2_fp.md  3_ar.md  4_ma.md  5_arma.md  6_sarima.md  7_sarimax.md  8_var.md  9_varma.md
notes/technical_analysis/3_time_series_analysis/examples/1/: 1.ipynb
notes/technical_analysis/3_time_series_analysis/examples/ar/1/: 1.ipynb
notes/technical_analysis/3_time_series_analysis/examples/arima/1/: 37-3
notes/technical_analysis/3_time_series_analysis/examples/arima/2/: 1.py
notes/technical_analysis/3_time_series_analysis/examples/arima/6/: 1.ipynb
notes/technical_analysis/3_time_series_analysis/examples/arima/7/: 1.ipynb
notes/technical_analysis/3_time_series_analysis/examples/arima/8_stats_new_version/: 1.ipynb
notes/technical_analysis/3_time_series_analysis/examples/arma/1/: 1.ipynb
notes/technical_analysis/3_time_series_analysis/examples/fp/1/: 1.ipynb
notes/technical_analysis/3_time_series_analysis/examples/fp/2/: 1.ipynb
notes/technical_analysis/3_time_series_analysis/examples/fp/3/: 1.ipynb
notes/technical_analysis/3_time_series_analysis/examples/fp/4/: 1.ipynb
notes/technical_analysis/3_time_series_analysis/examples/fp/5/: 1.ipynb
notes/technical_analysis/3_time_series_analysis/examples/fp/6/: 1.ipynb
notes/technical_analysis/3_time_series_analysis/examples/hwes/1/: 1.ipynb
notes/technical_analysis/3_time_series_analysis/examples/ma/1/: 1.ipynb
notes/technical_analysis/3_time_series_analysis/examples/sarima/1/: 1.ipynb
notes/technical_analysis/3_time_series_analysis/examples/sarimax/1/: 1.ipynb
notes/technical_analysis/3_time_series_analysis/examples/ses/1/: 1.ipynb
notes/technical_analysis/3_time_series_analysis/examples/var/1/: 1.ipynb
notes/technical_analysis/3_time_series_analysis/examples/varma/1/: 1.ipynb
notes/technical_analysis/3_time_series_analysis/examples/varmax/1/: 1.ipynb
scripts/: download_big_data.sh  download_data.py
scripts/pine/: HMA_CCI_strategy.pine  RSXC_LB.pine  hasKau_strategy.pine  normalized_macd.pine  occ_strategy.pine  zigzag_pa_strategy.pine
src/: main.cpp  main.hpp
src/binapi/inc/: binapi.hpp
src/binapi/src/: binapi.cpp
src/candle/inc/: candle.hpp
src/candle/src/: candle.cpp
src/candles/inc/: candles.hpp
src/candles/src/: candles.cpp
src/director/inc/: director.hpp
src/director/src/: director.cpp
src/exceptions/inc/: exceptions.hpp
src/exceptions/src/: exceptions.cpp
src/exchanges/inc/: exchanges.hpp
src/exchanges/src/: exchanges.cpp
src/indicators/inc/: indicators.hpp
src/indicators/src/: indicators.cpp
src/libs/binapi/src/: reports.cpp  types.cpp  websocket.cpp
src/libs/csv/: csv.hpp
src/libs/dotenv/include/: dotenv.hpp
src/libs/dotenv/src/: dotenv.cpp
src/manager/inc/: manager.hpp
src/manager/src/: manager.cpp
src/managers/inc/: managers.hpp
src/managers/src/: managers.cpp
src/request/inc/: request.hpp
src/request/src/: request.cpp
src/strategies/inc/: strategies.hpp
src/strategies/src/: strategies.cpp
src/tester/inc/: tester.hpp
src/tester/src/: tester.cpp
src/tgbot/inc/: tgbot.hpp
src/tgbot/src/: tgbot.cpp
src/trade/inc/: trade.hpp
src/trade/src/: trade.cpp
src/traders/inc/: traders.hpp
src/traders/src/: traders.cpp
src/workers/inc/: implementors.hpp  watchers.hpp  workers.hpp
src/workers/src/: implementors.cpp  watchers.cpp  workers.cpp
